--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: mtraceR
 Type: Package
 Title: an R package to analyse migration-n output
-Description: mtraceR can be used to visualise trace of MCMC chains, calculate 
+Description: mtraceR can be used to visualise traces of MCMC chains, calculate 
     Effective Sample Size (ESS), Gelman and Rubin's convergence diagnostic 
     (and plots), Bayes factor, and generate skyline plots.
 Version: 0.0.900
