--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(aesDT)
 export(ggplotDT)
 export(meta.BSP)
 export(mtrace)
+export(multi.BSP)
 import(coda)
 import(data.table)
 import(ggplot2)
