--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,11 +4,10 @@ Title: an R package to analyse migrate-n output
 Description: mtraceR can be used to visualise traces of MCMC chains, calculate
     Effective Sample Size (ESS), Gelman and Rubin's convergence diagnostic
     (and plots), Bayes factor, and generate skyline plots.
-Version: 0.0.3.900
-Date: 2015-05-20
+Version: 0.0.4
 Authors@R: as.person(c(
     "Carlo Pacioni <C.Pacioni@Murdoch.edu.au> [aut, cre]",
-    "Anders Goncalves Da Silva <andersgs@gmail.com> [aut]"
+    "Anders Goncalves Da Silva <andersgs@gmail.com> [ctb]"
     ))
 BugReports: https://github.com/carlopacioni/mtraceR/issues
 License: GPL-3
@@ -26,4 +25,4 @@ Suggests:
     roxygen2,
     testthat
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
