--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,12 @@
 export(BF)
 export(BSP)
 export(aesDT)
+export(cleanBayesAll)
 export(ggplotDT)
 export(meta.BSP)
 export(mtrace)
 export(multi.BSP)
+export(runMigrate)
 import(coda)
 import(data.table)
 import(ggplot2)
